# ffse

./: AUTHORS  ChangeLog  Doxyfile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
docs/: ffse.txt  todo.txt
sav/: Final Fantasy (U) [!].sav
source/: Makefile.am  Makefile.in  ffse.cc  ffse.hh  ffseApp.cc  windows.rc
source/model/: SaveSlot.cc  SaveSlot.hh
source/res/: Info.plist  ffse.cc  ffse.icns  ffse.pjd  ffse.xrc  orb32x32.xpm  windows.rc
source/view/: FileDropTarget.cc  FileDropTarget.hh  MainFrame.cc  MainFrame.hh
source/xrc/: ffse.xrc
vc.net/ffse/: ffse.sln  ffse.vcproj
vstudio/: ffse.sln  ffse.vcxproj  ffse.vcxproj.filters
vstudio/ffse/: ffse.sln  ffse.vcproj
